--- a/order.html
+++ b/order.html
@@ -57,6 +57,51 @@
       </form>
 
 
+
+      <!-- <div class="row">
+        <div class="carousel-item active w-20">
+            <img src="img/design-1.png" class="d-block " alt="...">
+          </div>
+      </div> -->
+
+
+      <div class="p-3 d-flex row justify-content-evenly ">
+        <div class="m-3 p-3 " style="width: 18rem;">
+            <img src="img/design-1.png" class="img-thumbnail" alt="...">
+          </div>
+
+          <div class="m-3 p-3" style="width: 18rem;">
+            <img src="img/design-2.png" class="img-thumbnail" alt="..."></div>
+          </div>
+          
+
+      </div>
+      
+
+
+      <!-- <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner ">
+          <div class="carousel-item active">
+            <img src="img/design-1.png" class="d-block " alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="img/design-2.png" class="d-block h-100 w-25" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="img/design-1.png" class="d-block h-100 w-25" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"  data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"  data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div> -->
+
+
     <!-- class="card-preview"
       width="560" height="315" -->
       <iframe class="pb-3 d-flex align-self-center container card-preview" src="https://card.codopolis.com/%d0%b4%d0%b5%d0%bc%d0%be-1/" title="W3Schools Free Online Web Tutorials">
